syntax = "proto3";
package tm;

option go_package = "github.com/gnolang/gno/tm2/pkg/crypto/merkle/pb";

// messages
message ProofOp {
	string type = 1;
	bytes key = 2;
	bytes data = 3;
}

message Proof {
	repeated ProofOp ops = 1;
}

message SimpleProof {
	sint64 total = 1;
	sint64 index = 2;
	bytes leaf_hash = 3;
	repeated bytes aunts = 4;
}

message SimpleProofNode {
	bytes hash = 1 [json_name = "Hash"];
	SimpleProofNode parent = 2 [json_name = "Parent"];
	SimpleProofNode left = 3 [json_name = "Left"];
	SimpleProofNode right = 4 [json_name = "Right"];
}

message MERKLE_BytesList {
	repeated bytes Value = 1;
}